// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When registering, deactivating, and reactivating a user as a super admin As a super admin once more should reactivate the user 1`] = `
Object {
  "reactivateUser": Object {
    "user": Object {
      "active": true,
      "firstName": "New",
      "lastName": "User",
    },
  },
}
`;

exports[`When registering, deactivating, and reactivating a user as a super admin As the new user should get the correct current user 1`] = `"New"`;

exports[`When registering, deactivating, and reactivating a user as a super admin As the reactivated user should get the correct current user 1`] = `
Object {
  "currentUser": Object {
    "firstName": "New",
    "lastName": "User",
  },
}
`;
